# vineland_llm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: index.py
configs/: agents.yaml  pilot.yaml  smoke.yaml
configs/agents/: claude-opus-4-5.yaml  deepseek-r1-free.yaml  deepseek-r1.yaml  deepseek-v3-free.yaml  gemma-27b.yaml  gemma-3-12b-free.yaml  gemma-3-1b-free.yaml  gemma-3-27b-free.yaml  gemma-3-4b-free.yaml  gemma-4-26b-a4b-it-free.yaml  gemma-4-31b-it-free.yaml  gpt-5-reasoning.yaml  gpt-5.yaml  llama-3.1-8b-free.yaml  llama-3.2-3b-free.yaml  llama-3.3-70b-free.yaml  llama-70b.yaml  mistral-7b-free.yaml  mistral-7b-instruct-v0.1.yaml  (+8 more)
items/: af_subdomain_spec_v01.yaml  items_03.yaml  items_phase2_PLN_REC_MET.yaml  items_v04_appendix.yaml  new_items_tier45.yaml  schema.json
items_legacy/: items.yaml
scripts/: split_agents_yaml.py  strip_errors.py
tests/: conftest.py  test_agents_load.py  test_grading.py  test_items_load.py  test_runner_integration.py  test_scoring.py  test_scoring_extended.py
vineland_api/: .env.example  Dockerfile  pyproject.toml
vineland_api/vineland_api/: __init__.py  config.py  github_store.py  main.py  models.py  ranking.py  worker.py
vineland_runner/: __init__.py  _yaml_sources.py  cli.py  cli_rescore.py  client.py  config.py  diagnostics.py  grading.py  items.py  profile.py  ranking.py  runner.py  scoring.py  stats.py  storage.py  types.py
vineland_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+7 files in other folders)
